--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,11 @@ install:
   - 7z x msys2.tar.xz
   - 7z x msys2.tar > NUL
   - msys64\usr\bin\bash -lc ""
-  - msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-i686-gcc mingw-w64-x86_64-gcc make perl autoconf flex bison gperf && break || sleep 15; done"
+  - msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy make perl autoconf flex bison gperf && break || sleep 15; done"
+  - if [%MSYSTEM%]==[MINGW32] msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-i686-gcc && break || sleep 15; done"
+  - if [%MSYSTEM%]==[MINGW64] msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-x86_64-gcc && break || sleep 15; done"
   - git clone https://github.com/steveicarus/ivtest.git
 build_script:
-  - msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; autoconf; ./configure; make; make install"
+  - msys64\usr\bin\bash -lc "cd /c/projects/iverilog; ./autoconf.sh; ./configure; make; make install"
 test_script: 
-  - msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER\ivtest; perl vvp_reg.pl"
+  - msys64\usr\bin\bash -lc "cd /c/projects/iverilog/ivtest; perl vvp_reg.pl"
