--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
     #- MSYSTEM: MINGW32
     - MSYSTEM: MINGW64
 install:
-  - appveyor DownloadFile "http://downloads.sourceforge.net/project/msys2/Base/%MSYS2_ARCH%/msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz" -FileName "msys2.tar.xz"
+  - appveyor DownloadFile "http://kent.dl.sourceforge.net/project/msys2/Base/%MSYS2_ARCH%/msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz" -FileName "msys2.tar.xz"
   - 7z x msys2.tar.xz
   - 7z x msys2.tar > NUL
   - msys64\usr\bin\bash -lc ""
@@ -16,6 +16,6 @@ install:
   - if [%MSYSTEM%]==[MINGW64] msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-x86_64-gcc make perl autoconf flex bison gperf && break || sleep 15; done"
   - git clone https://github.com/steveicarus/ivtest.git
 build_script:
-  - msys64\usr\bin\bash -lc "cd /c/projects/iverilog; ./autoconf.sh; cat -n ./configure; ./configure; make; make install"
+  - msys64\usr\bin\bash -lc "cd /c/projects/iverilog; exec 0</dev/null; ./autoconf.sh; ./configure; make; make install"
 test_script: 
   - msys64\usr\bin\bash -lc "cd /c/projects/iverilog/ivtest; perl vvp_reg.pl"
