--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,8 @@ install:
   - 7z x msys2.tar.xz
   - 7z x msys2.tar > NUL
   - msys64\usr\bin\bash -lc ""
-  - if [%MSYSTEM%]==[MINGW32] msys64\usr\bin\bash -lc "for i in {1..5}; do pacman --noconfirm -Suy mingw-w64-i686-gcc make perl autoconf flex bison gperf && break || sleep 15; done"
-  - if [%MSYSTEM%]==[MINGW64] msys64\usr\bin\bash -lc "for i in {1..5}; do pacman --noconfirm -Suy mingw-w64-x86_64-gcc make perl autoconf flex bison gperf && break || sleep 15; done"
+  - if [%MSYSTEM%]==[MINGW32] msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-i686-gcc make perl autoconf flex bison gperf && break || sleep 15; done"
+  - if [%MSYSTEM%]==[MINGW64] msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy mingw-w64-x86_64-gcc make perl autoconf flex bison gperf || sleep 15; done"
   - git clone https://github.com/steveicarus/ivtest.git
 build_script:
   - msys64\usr\bin\bash -lc "cd /c/projects/iverilog; exec 0</dev/null; ./autoconf.sh; ./configure; make; make install"
