--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,9 +5,9 @@ environment:
     MSYS2_BASEVER: 20150512
     MSYS2_ARCH: x86_64
   matrix:
-    - MSYSTEM: MINGW32
+    #- MSYSTEM: MINGW32
     - MSYSTEM: MINGW64
-      CFLAGS: -fpermissive
+      CPPFLAGS: -fpermissive
 install:
   - appveyor DownloadFile "http://kent.dl.sourceforge.net/project/msys2/Base/%MSYS2_ARCH%/msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz" -FileName "msys2.tar.xz"
   - 7z x msys2.tar.xz
