--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,10 @@ before_script:
 
   - PowerShell -Command "Start-Process .\7zsetup -ArgumentList '/S /D=c:/7zip' -Wait"
   - PowerShell -Command "C:\7zip\7z e msys2-x86_64-latest.tar.xz -Wait"
-  - PowerShell -Command C:\7zip\7z x msys2-x86_64-latest.tar -o"C:\\" 
+  - PowerShell -Command "C:\7zip\7z x msys2-x86_64-latest.tar -oC:\\" 
 
   - ls /c/
-  - export PATH=/c/msys64/usr/bin:$PATH
+  - SET PATH=c:/msys64/usr/bin:%PATH%
   - gcc -v
   - pacman -Q
   
