--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_script:
   - ls /c/msys64
   - set PATH=c:/msys64/usr/bin:%PATH%
   - gcc -v
-  - C:\msys64\usr\bin\pacman.exe -Q
+  - PowerShell -Command "C:\msys64\usr\bin\pacman.exe -Q"
   - pacman -Q
   
   - dir c:\
