--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_script:
   - ls /c/
   - ls /c/msys64/usr/bin
   - ls /c/msys64
+  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'pacman -Q'"
   - export PATH=/c/msys64/usr/bin:%PATH%
   - set
   - gcc -v
