--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ before_script:
   - ls /c/msys64/usr/bin
   - ls /c/msys64
   - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'pacman -Q'"
+  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'pacman -S mingw-w64-x86_64-toolchain'"
   - export PATH=/c/msys64/usr/bin:%PATH%
   - set
   - gcc -v
