--- a/.travis.yml
+++ b/.travis.yml
@@ -15,54 +15,29 @@ notifications:
   email: false
 
 os:
-  # - linux
+  - linux
   - windows
   
 install:
- - git clone https://github.com/steveicarus/ivtest.git
- #- gcc -v
- #- export PATH=$HOME/bin:$PATH
- 
-before_script:
-
-  #- which gcc
-  #- ls /c/tools/mingw64/bin
-  #- ls /c/tools/mingw64
-  #- ls /c/tools
-  #- ls /c
-  #- gcc -v
- 
-  - PowerShell -Command "Invoke-WebRequest -outfile 7zsetup.exe http://www.7-zip.org/a/7z1604-x64.exe"
-  - PowerShell -Command "Invoke-WebRequest -outfile msys2-x86_64-latest.tar.xz http://repo.msys2.org/distrib/msys2-x86_64-latest.tar.xz" 
-
-  - PowerShell -Command "Start-Process .\7zsetup -ArgumentList '/S /D=c:/7zip' -Wait"
-  - PowerShell -Command "C:\7zip\7z e msys2-x86_64-latest.tar.xz -Wait"
-  - PowerShell -Command "C:\7zip\7z x msys2-x86_64-latest.tar -oC:\\" 
-
-  #- ls /c/
-  #- ls /c/msys64/usr/bin
-  #- ls /c/msys64
-  #- C:\msys64\usr\bin\bash -lc 'pacman --noconfirm -Q'
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'pacman --noconfirm -S  base-devel mingw-w64-x86_64-toolchain'"
+  - git clone https://github.com/steveicarus/ivtest.git
+  - export PATH=$HOME/bin:$PATH
   
-  
-  
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'set; pwd'"
-  
-  
-  #- export PATH=/c/msys64/usr/bin:%PATH%
-  #- set
-  #- gcc -v
-  #- pacman-key --init
-  #- bash -lc "pacman-key --init"
-  #- PowerShell -Command "C:\msys64\usr\bin\pacman.exe -Q"
-  #- pacman -Q
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "Invoke-WebRequest -outfile 7zsetup.exe http://www.7-zip.org/a/7z1604-x64.exe"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "Invoke-WebRequest -outfile msys2-x86_64-latest.tar.xz http://repo.msys2.org/distrib/msys2-x86_64-latest.tar.xz"; fi 
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "Start-Process .\7zsetup -ArgumentList '/S /D=c:/7zip' -Wait"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\7zip\7z e msys2-x86_64-latest.tar.xz -Wait"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\7zip\7z x msys2-x86_64-latest.tar -oC:\\" ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\msys64\usr\bin\bash -lc 'pacman --noconfirm -S  base-devel mingw-w64-x86_64-toolchain'"; fi
 
 script:
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin ./autoconf.sh'"
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin ./configure --prefix=/usr'"
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin make'"
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin make install'"
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin iverilog -h'"
-  - PowerShell -Command "C:\msys64\usr\bin\bash -lc 'export PATH=/mingw64/bin:/bin; cd $HOME/ivtest; perl vvp_reg.pl'"
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin ./autoconf.sh'"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin ./configure --prefix=/usr'"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin make'"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin make install'"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\msys64\usr\bin\bash -lc 'PATH=/mingw64/bin:/bin iverilog -h'"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then PowerShell -Command "C:\msys64\usr\bin\bash -lc 'export PATH=/mingw64/bin:/bin; cd $TRAVIS_BUILD_DIR/ivtest; perl vvp_reg.pl'"; fi
   
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then autoconf; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./configure --prefix=$HOME; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make; make install; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd ivtest; perl vvp_reg.pl; fi
